src/components/layout/overrides/pureaccel.scss
/* ... */
@media (min-width: 640px) and (min-height: 1152px) {
  .regularlayout {
    &.pureaccel {
      &.photo-wall-container {
        .dashboard-header {
          .dashboard-title {
            display: block;
            width: 100%;
            font-size: 4.5em;
            margin-left: 250px;
            margin-top: 3px;
          }
        }

      }
      &.leaderboard {
        .dashboard-header {
          .dashboard-title {
            display: block;
            font-size: 4em;
            padding-top: 20px;
            padding-left: 115px;
          }
        }
        .background-wave {
          display: none;
          canvas {
            display: none;
          }
        }
        .dashboard-content {
          &.leaderboard-cards {
            margin-top: 150px;
            .ranked-tweeter-card {
              width: 100%;
              justify-content: center;
              .tweeter-image {
                .image-obj {
                  max-width: 120px;
                  max-height: 120px;
                }
              }
              .tweeter-details {
                width: 460px;
                .tweets {
                  width: 95%;
                }
              }
              &:nth-last-child(1) {
                margin-bottom: 100px;
              }
            }
            .tweeter-card {
              .tweeter-details {
                .tweeter-image {
                  z-index: 2;
                }
              }
              .tweets {
                  .count {
                    padding-left: 130px;
                  }
              }
            }
          }
        }
      }
      &.leaderboardv2 {
        .container {
          width: 70rem;
          .top {
          }
          .rest-parent {
            height: 50vh;
          }
        }
      }
    }
  }
}
@media (min-width: 640px) and (min-height: 1920px) {
  .regularlayout {
    &.pureaccel {
      &.leaderboardv2 {
        .container {
          width: 70rem;
          .top {
          }
          .rest-parent {
            height: 65vh;
          }
        }
      }
    }
  }
}

@media (min-width: 1920px) and (max-height: 768px) {
  .regularlayout {
    &.pureaccel {
      &.leaderboard {
        .dashboard-content {
          margin-top: 70px;
          &.leaderboard-cards {
            justify-content: center;
            align-items: center;
          }
          .ranked-tweeter-card {
            .tweeter-image {
              width: 210px;
              height: 210px;
              .image-obj {
                width: 210px;
              height: 210px;
              }
              img {
                width: 210px;
                height: 210px;
              }
            }
            .tweeter-details {
              width: 240px;
              height: 150px;
              .tweets {
                .count {
                  .text {
                    font-size: 1.8em;
                  }
                }
                .icon-twitter {
                  bottom: -3px;
                  font-size: 2em;
                }
              }
            }
          }
          .tweeter-card {
            height: 130px;
            .tweeter-details {
              .tweeter-image {
                .image-obj {
                  width: 90px;
                  height: 90px;
                }
              }
            }
            .tweets {
              .count {
                .text {
                  font-size: 2rem;
                }
              }
              .icon-twitter {
                font-size: 1.8em;
                bottom: -3px;
              }
            }
          }
        }
      }
    }
  }
}

